[package]
name = "substrate-stablecoin"
version = "0.0.1"
authors = ["apopiak"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'system/std',
]

[dependencies]
num-rational = "0.2"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'

[dev-dependencies]
quickcheck = "0.9.2"
more-asserts = "0.2.1"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7242c7e14e2f20e31a37032cf1066a5fb2f9f1c4'
version = '2.0.0'
