[package]
name = "pallet-stablecoin"
version = "0.0.4"
authors = ["apopiak"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'system/std',
]

[dependencies]
static_assertions = "1.1.0"

[dependencies.num-rational]
default-features = false
version = "0.2"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.3'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.3'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.3'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.3'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.3'

[dev-dependencies]
itertools = "0.8.2"
quickcheck = "0.9.2"
more-asserts = "0.2.1"
rand = "0.7.3"
log = "0.4.8"

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.3'
