[package]
name = "pallet-price-fetch"
authors = ["Jimmy Chu"]
version = "1.2.0"
edition = "2018"

[dependencies]
num-traits = { version = "0.2.8", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"
default-features = false
features = ["derive"]

[dependencies.primitives]
package = "sp-core"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.rstd]
package = "sp-std"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.runtime-io]
package = "sp-io"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0-alpha.5"

[dependencies.sp-session]
default-features = false
version = "2.0.0-alpha.5"

[dependencies.support]
package = "frame-support"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.system]
package = "frame-system"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.timestamp]
package = "pallet-timestamp"
default-features = false
version = "2.0.0-alpha.5"

[dependencies.simple-json]
git = 'https://github.com/jimmychu0807/simple-json'
version = '0.1.5'
default_features = false

[build-dependencies.wasm-builder-runner]
package = "substrate-wasm-builder-runner"
version = "1.0.5"

[features]
default = ["std"]
std = [
  "codec/std",
  "primitives/std",
  "rstd/std",
  "runtime-io/std",
  "sp-runtime/std",
  "sp-session/std",
  "support/std",
  "system/std",
  "timestamp/std"
]
